--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@adonisjs/prettier-config": "^1.4.4",
     "@adonisjs/tsconfig": "^1.4.0",
     "@chromatic-com/storybook": "^4.1.2",
+    "@japa/api-client": "^3.1.0",
     "@japa/assert": "^4.0.1",
     "@japa/plugin-adonisjs": "^4.0.0",
     "@japa/runner": "^4.2.0",
@@ -53,19 +54,19 @@
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
     "@vitejs/plugin-react": "^5.1.0",
+    "@vitest/browser-playwright": "^4.0.4",
+    "@vitest/coverage-v8": "^4.0.4",
     "eslint": "^9.26.0",
     "eslint-plugin-storybook": "^10.0.0",
     "hot-hook": "^0.4.0",
     "pino-pretty": "^13.0.0",
+    "playwright": "^1.56.1",
     "prettier": "^3.5.3",
     "storybook": "^10.0.0",
     "ts-node-maintained": "^10.9.5",
     "typescript": "~5.8.3",
     "vite": "^6.3.5",
-    "vitest": "^4.0.4",
-    "playwright": "^1.56.1",
-    "@vitest/browser-playwright": "^4.0.4",
-    "@vitest/coverage-v8": "^4.0.4"
+    "vitest": "^4.0.4"
   },
   "dependencies": {
     "@adonisjs/auth": "^9.4.0",
